# CheckPt-Haskell

./: CheckPt.cabal  CheckPt.hs  Main.hs  Makefile  README  README.md  Setup.hs  checkpt_complete  foo.json  sample.json
CheckPt/: CLI.hs  Config.hs  DataSet.hs  MediaCollection.hs  MediaItem.hs  SimpleMediaCollection.hs
CheckPt/CLI/: Add.hs  Collection.hs  Complete.hs  Delete.hs  GarbageCollect.hs  Init.hs  List.hs  Mode.hs  Names.hs  Result.hs  Uncomplete.hs
test/: Main.hs
test/CheckPt/: MediaCollectionTests.hs
test/CheckPtTests/: DataSetTests.hs  MediaCollectionTests.hs  MediaItemTests.hs
